unpackaged/main/default/objects/PagesApi__Field__c/PagesApi__Field__c.object-meta.xml
<CustomObject>
    <description>Fields store data that drives the look and field and behavior of web forms published in the Web Publisher application.</description>
    <label>Field</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>