unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Dependent_Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Dependent_Picklist_Field__c</fullName>
    <description>This field references one of the dependent picklist fields to be shown in the form.</description>
    <inlineHelpText>This field references one of the dependent picklist fields to be shown in the form.</inlineHelpText>
    <label>Dependent Picklist Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>