unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Dependent_Picklist_Object__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Dependent_Picklist_Object__c</fullName>
    <description>This field defines the object where the dependent picklist is configured.</description>
    <inlineHelpText>This field defines the object where the dependent picklist is configured.</inlineHelpText>
    <label>Dependent Picklist Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>