unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates parent field record to child field record.</description>
    <inlineHelpText>Relates parent field record to child field record.</inlineHelpText>
    <label>Parent Field</label>
    <referenceTo>PagesApi__Field__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Child_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>