unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Field_Group__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Field_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** All fields must be associated with a Field Group. Field Groups can be used to update and create new records in the database.</description>
    <inlineHelpText>**Required** All fields must be associated with a Field Group. Field Groups can be used to update and create new records in the database.</inlineHelpText>
    <label>Field Group</label>
    <referenceTo>PagesApi__Field_Group__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>Lookup</type>
</CustomField>