unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Form__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates this field to a form.</description>
    <inlineHelpText>Associates this field to a form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>Lookup</type>
</CustomField>