unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Help_Text__c</fullName>
    <description>A value in this field displays a help icon next to the field on the form.  Hovering the cursor over the help icon displays a text box with the help text field&#39;s content to assist the user in understanding the nature of the question.</description>
    <inlineHelpText>A value in this field displays a help icon next to the field on the form.  Hovering the cursor over the help icon displays a text box with the help text field&#39;s content to assist the user in understanding the nature of the question.</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>