unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Hidden_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Hidden_Field_Value__c</fullName>
    <description>Populates a hidden field with the value entered in this field (only required when field is hidden on the form by default).</description>
    <inlineHelpText>Populates a hidden field with the value entered in this field (only required when field is hidden on the form by default).</inlineHelpText>
    <label>Hidden Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>