unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does not display the field to end users when checked. This is typically used when you wish to pass default or constant values as the value for the field.</description>
    <inlineHelpText>Does not display the field to end users when checked. This is typically used when you wish to pass default or constant values as the value for the field.</inlineHelpText>
    <label>Hidden Field</label>
    <type>Checkbox</type>
</CustomField>