unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires the field for all users submitting the form. Defaults unchecked.</description>
    <inlineHelpText>Requires the field for all users submitting the form. Defaults unchecked.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>