unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Mapped_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Mapped_Field__c</fullName>
    <description>**Optional** Specifies the field the response will be mapped to.</description>
    <inlineHelpText>**Optional** Specifies the field the response will be mapped to.</inlineHelpText>
    <label>Mapped Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>