unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Options__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Options__c</fullName>
    <description>Specifies the list of values for a Picklist or Multi-Picklist field below. Each value should be separated by a new line.</description>
    <inlineHelpText>Specifies the list of values for a Picklist or Multi-Picklist field below. Each value should be separated by a new line.</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>