unpackaged/main/default/objects/PagesApi__Field__c/fields/PagesApi__Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Specifies the order this field is presented to the end user.</description>
    <inlineHelpText>Specifies the order this field is presented to the end user.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>